# piscine-python

./: .gitignore  FORGETMENOT.md  README.md  RULES.md
.circleci/: config.yml
.github/workflows/: run_tests.yml
py00/ex00/: Hello.py  README.md
py00/ex01/: README.md  format_ft_time.py
py00/ex02/: README.md  find_ft_type.py  tester.py
py00/ex03/: NULL_not_found.py  README.md  tester.py
py00/ex04/: README.md  test_whatis.py  tester.sh  whatis.py
py00/ex05/: README.md  building.py  test_building.py  tester.sh
py00/ex06/: README.md  filterstring.py  ft_filter.py  test_docs.py  test_filterstring.py  tests_docs.py
py00/ex07/: README.md  sos.py  test_sos.py
py00/ex08/: Loading.py  README.md  install.py  tester.py
py00/ex09/: README.md  install.sh  pyproject.toml  setup.py  test_script.py
py00/ex09/ft_package/: core.py
py00/ex09/src/ft_package/: ft_package.py
py01/ex00/: README.md  give_bmi.py  tester.py  tester_give_bmi.py  tester_give_bmi_pytest.py  unit_tests.csv
py01/ex01/: README.md  array2D.py  tester.py  tester_array2D.py  tester_array2D_pytest.py
py01/ex02/: README.md  REAMDE.md  __main__.py  load_image.py  requirements.txt  test_load_image.py  tester.py  tester_load_image.py  tester_load_image_pytest.py
py01/ex03/: README.md  __main__.py  load_image.py  requirements.txt  test_zoom.py  tester_zoom.py  zoom.py
py01/ex04/: README.md  __main__.py  load_image.py  requirements.txt  rotate.py  test_rotate.py  tester_rotate.py
py01/ex05/: README.md  load_image.py  pimp_image.py  requirements.txt  test_ft_blue.py  (+10 more)
py02/: README.md
(+53 files in other folders)
