[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
	{name = "Semiha Beyazkilic", email = "seozcan@student.42.fr"}
]
maintainers = [
	{name = "Semiha Beyazkilic", email = "seozcan@student.42.fr"}
]
description = "A sample test package"
readme = "README.md"
license={text = "MIT"}
classifiers = [
]
